--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@angular/cli": "~7.2.2",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@types/file-saver": "^2.0.2",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
