--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ngx-pagination": "^5.0.0",
     "ngx-perfect-scrollbar": "^9.0.0",
     "ngx-progressbar": "^2.1.1",
+    "ngx-smooth-dnd": "^0.4.1",
     "ngx-toastr": "^10.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.3.3",
